--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cypress:install": "cypress install",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
+    "cypress:dev": "start-server-and-test dev http://localhost:5173 'cypress open --config baseUrl=http://localhost:5173'",
     "cypress:local": "start-server-and-test serve http://localhost:3000 cypress:run --config baseUrl=http://localhost:3000",
     "fulltest": "rm -rf node_modules && pnpm i && pnpm run lint && pnpm run coverage && pnpm run cypress:local"
   },
@@ -31,7 +32,7 @@
     "axios": "^1.1.3",
     "pinia": "^2.0.23",
     "prism-theme-vars": "^0.2.4",
-    "vee-validate": "^4.7.1",
+    "vee-validate": "^4.7.2",
     "vue": "^3.2.41",
     "vue-easy-lightbox": "^1.9.0",
     "vue-i18n": "^9.2.2",
@@ -39,13 +40,13 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.29.2",
+    "@antfu/eslint-config": "^0.29.3",
     "@intlify/vite-plugin-vue-i18n": "^6.0.3",
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/jsdom": "^20.0.0",
-    "@types/node": "^18.11.8",
+    "@types/node": "^18.11.9",
     "@vitejs/plugin-vue": "3.2.0",
-    "@vitest/coverage-c8": "^0.24.4",
+    "@vitest/coverage-c8": "^0.24.5",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/tsconfig": "^0.1.3",
@@ -77,7 +78,7 @@
     "vite-plugin-vue-markdown": "^0.22.1",
     "vite-plugin-windicss": "^1.8.8",
     "vite-ssg": "^0.21.2",
-    "vitest": "^0.24.4",
+    "vitest": "^0.24.5",
     "vue-tsc": "^1.0.9",
     "windicss": "^3.5.6"
   },
