--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
     "fulltest": "rm -rf node_modules && pnpm i && pnpm run lint && pnpm run coverage && pnpm run cy:local"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-brands-svg-icons": "^6.2.0",
-    "@fortawesome/free-regular-svg-icons": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/vue-fontawesome": "^3.0.2",
     "animate.css": "^4.1.1",
     "axios": "^1.1.3",
-    "pinia": "^2.0.23",
+    "pinia": "^2.0.24",
     "prism-theme-vars": "^0.2.4",
     "vee-validate": "^4.7.3",
     "vue": "^3.2.45",
@@ -40,9 +40,10 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.30.1",
+    "@antfu/eslint-config": "^0.31.0",
     "@intlify/vite-plugin-vue-i18n": "^6.0.3",
     "@rushstack/eslint-patch": "^1.2.0",
+    "@tailwindcss/typography": "^0.5.8",
     "@types/jsdom": "^20.0.1",
     "@types/node": "^18.11.9",
     "@vitejs/plugin-vue": "3.2.0",
@@ -51,9 +52,10 @@
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/tsconfig": "^0.1.3",
     "@vueuse/core": "^9.5.0",
-    "@vueuse/head": "^1.0.13",
+    "@vueuse/head": "^1.0.16",
+    "autoprefixer": "^10.4.13",
     "c8": "^7.12.0",
-    "cypress": "^11.0.1",
+    "cypress": "^11.1.0",
     "dayjs": "^1.11.6",
     "eslint": "^8.27.0",
     "eslint-plugin-vue": "^9.7.0",
@@ -64,23 +66,24 @@
     "markdown-it-anchor": "^8.6.5",
     "markdown-it-link-attributes": "^4.0.1",
     "markdown-it-prism": "^2.3.0",
-    "netlify-cli": "^12.1.1",
+    "netlify-cli": "^12.2.1",
+    "postcss": "^8.4.19",
     "prettier": "^2.7.1",
     "prismjs": "^1.29.0",
     "start-server-and-test": "^1.14.0",
+    "tailwindcss": "^3.2.4",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4",
+    "typescript": "^4.9.3",
     "unplugin-auto-import": "^0.11.4",
     "unplugin-vue-components": "^0.22.9",
-    "vite": "^3.2.3",
+    "vite": "^3.2.4",
     "vite-plugin-pages": "^0.27.1",
     "vite-plugin-pages-sitemap": "^1.4.0",
     "vite-plugin-vue-markdown": "^0.22.1",
     "vite-plugin-windicss": "^1.8.8",
     "vite-ssg": "^0.21.2",
     "vitest": "^0.25.2",
-    "vue-tsc": "^1.0.9",
-    "windicss": "^3.5.6"
+    "vue-tsc": "^1.0.9"
   },
   "eslintConfig": {
     "extends": "@antfu"
