--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nuxtjs/google-fonts": "^3.0.0-1",
     "@nuxtjs/i18n": "8.0.0-beta.4",
     "@nuxtjs/tailwindcss": "^6.1.3",
+    "cypress": "^11.1.0",
     "dayjs": "^1.11.6",
     "nuxt": "^3.0.0",
     "nuxt-icon": "^0.1.7"
