--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "generate": "nuxt generate",
     "preview": "nuxt generate && nuxt preview",
     "test": "vitest",
+    "coverage": "vitest run --coverage",
     "cy:install": "cypress install",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
     "cy:dev": "start-server-and-test dev http://localhost:3000 'cypress open --config baseUrl=http://localhost:3000'",
     "cy:local": "start-server-and-test preview http://localhost:3000 'cypress run --config baseUrl=http://localhost:3000'",
-    "fulltest": "rm -rf node_modules && pnpm i && pnpm run cy:local"
+    "fulltest": "rm -rf node_modules && pnpm i && pnpm run coverage && pnpm run cy:local"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
@@ -31,6 +32,7 @@
     "@nuxtjs/google-fonts": "^3.0.0-1",
     "@nuxtjs/i18n": "8.0.0-beta.4",
     "@nuxtjs/tailwindcss": "^6.1.3",
+    "@vitest/coverage-c8": "^0.25.2",
     "cypress": "^11.1.0",
     "dayjs": "^1.11.6",
     "jsdom": "^20.0.3",
