--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "fulltest": "rm -rf node_modules && pnpm i && pnpm run lint && pnpm run coverage && pnpm run build"
   },
   "devDependencies": {
-    "@dargmuesli/nuxt-cookie-control": "^6.4.2",
+    "@dargmuesli/nuxt-cookie-control": "^6.4.3",
     "@iconify-json/circle-flags": "^1.1.41",
     "@iconify-json/logos": "^1.1.37",
     "@iconify-json/mdi": "^1.1.54",
@@ -35,7 +35,7 @@
     "@iconify-json/ph": "^1.1.6",
     "@iconify-json/simple-icons": "^1.1.71",
     "@nuxt/content": "npm:@nuxt/content-edge@latest",
-    "@nuxt/devtools": "^0.8.3",
+    "@nuxt/devtools": "^0.8.4",
     "@nuxt/image": "1.0.0-rc.2",
     "@nuxt/ui": "^2.8.1",
     "@nuxthq/studio": "^0.14.1",
@@ -43,15 +43,15 @@
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/i18n": "npm:@nuxtjs/i18n-edge@8.0.0-rc.4-28240475.595f9ca",
     "@nuxtjs/plausible": "^0.2.3",
-    "@types/node": "^20.6.2",
+    "@types/node": "^20.6.3",
     "@vernaillen/nuxt-base-layer": "^0.2.20",
     "@vitest/coverage-v8": "^0.34.4",
     "@vueuse/nuxt": "^10.4.1",
     "cssnano": "^6.0.1",
     "cypress": "^13.2.0",
-    "dayjs": "^1.11.9",
+    "dayjs": "^1.11.10",
     "eslint": "^8.49.0",
-    "happy-dom": "^12.0.1",
+    "happy-dom": "11.2.0",
     "nuxt": "^3.7.3",
     "nuxt-og-image": "^2.0.28",
     "nuxt-time": "^0.1.1",
