--- a/package.json
+++ b/package.json
@@ -33,15 +33,15 @@
     "@iconify-json/mdi": "^1.1.54",
     "@iconify-json/noto": "^1.1.12",
     "@iconify-json/ph": "^1.1.6",
-    "@iconify-json/simple-icons": "^1.1.72",
+    "@iconify-json/simple-icons": "^1.1.73",
     "@nuxt/content": "^2.8.5",
-    "@nuxt/devtools": "^0.8.5",
-    "@nuxt/image": "1.0.0-rc.2",
-    "@nuxt/ui": "^2.8.1",
-    "@nuxthq/studio": "^0.14.1",
+    "@nuxt/devtools": "1.0.0-beta.0",
+    "@nuxt/image": "1.0.0-rc.3",
+    "@nuxt/ui": "^2.9.0",
+    "@nuxthq/studio": "^1.0.0",
     "@nuxtjs/critters": "^0.5.1",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "@nuxtjs/i18n": "npm:@nuxtjs/i18n-edge@8.0.0-rc.4-28240475.595f9ca",
+    "@nuxtjs/i18n": "v8.0.0-rc.5",
     "@nuxtjs/plausible": "^0.2.3",
     "@types/node": "^20.8.0",
     "@vernaillen/nuxt-base-layer": "^0.2.20",
@@ -53,7 +53,7 @@
     "eslint": "^8.50.0",
     "happy-dom": "11.2.0",
     "nuxt": "^3.7.4",
-    "nuxt-og-image": "^2.0.28",
+    "nuxt-og-image": "^2.1.1",
     "nuxt-time": "^0.1.1",
     "nuxt-vitest": "^0.10.5",
     "remark-breaks": "^4.0.0",
