--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@iconify-json/ph": "^1.1.6",
     "@iconify-json/simple-icons": "^1.1.75",
     "@nuxt/content": "^2.8.5",
-    "@nuxt/devtools": "1.0.0-beta.3",
+    "@nuxt/devtools": "1.0.0",
     "@nuxt/image": "1.0.0-rc.3",
     "@nuxt/ui": "^2.9.0",
     "@nuxthq/studio": "^1.0.2",
@@ -43,12 +43,12 @@
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/i18n": "v8.0.0-rc.5",
     "@nuxtjs/plausible": "^0.2.3",
-    "@types/node": "^20.8.6",
+    "@types/node": "^20.8.7",
     "@vernaillen/nuxt-base-layer": "^0.2.21",
     "@vitest/coverage-v8": "^0.34.6",
     "@vueuse/nuxt": "^10.5.0",
     "cssnano": "^6.0.1",
-    "cypress": "^13.3.1",
+    "cypress": "^13.3.2",
     "dayjs": "^1.11.10",
     "eslint": "^8.51.0",
     "happy-dom": "12.9.1",
