--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "fulltest": "rm -rf node_modules && pnpm i && pnpm run lint && pnpm run coverage && pnpm run build"
   },
   "devDependencies": {
-    "@dargmuesli/nuxt-cookie-control": "^6.4.5",
+    "@dargmuesli/nuxt-cookie-control": "^6.4.6",
     "@iconify-json/circle-flags": "^1.1.43",
     "@iconify-json/logos": "^1.1.37",
     "@iconify-json/mdi": "^1.1.54",
@@ -36,12 +36,12 @@
     "@iconify-json/simple-icons": "^1.1.75",
     "@nuxt/content": "^2.8.5",
     "@nuxt/devtools": "1.0.0",
-    "@nuxt/image": "1.0.0-rc.3",
+    "@nuxt/image": "1.0.0",
     "@nuxt/ui": "^2.9.0",
     "@nuxthq/studio": "^1.0.2",
     "@nuxtjs/critters": "^0.5.1",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "@nuxtjs/i18n": "v8.0.0-rc.5",
+    "@nuxtjs/i18n": "8.0.0-rc.5",
     "@nuxtjs/plausible": "^0.2.3",
     "@types/node": "^20.8.7",
     "@vernaillen/nuxt-base-layer": "^0.2.21",
@@ -52,13 +52,12 @@
     "dayjs": "^1.11.10",
     "eslint": "^8.51.0",
     "happy-dom": "12.9.1",
-    "nuxt": "^3.7.4",
+    "nuxt": "^3.8.0",
     "nuxt-og-image": "^2.1.3",
     "nuxt-time": "^0.1.1",
-    "nuxt-vitest": "^0.11.0",
     "remark-breaks": "^4.0.0",
     "start-server-and-test": "^2.0.1",
-    "vitest": "0.33.0"
+    "vitest": "^0.34.6"
   },
   "dependencies": {
     "@twicpics/components": "^0.23.2",
