--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@nuxthq/studio": "^1.0.5",
     "@nuxtjs/critters": "^0.5.1",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "@nuxtjs/i18n": "8.0.0-rc.6",
+    "@nuxtjs/i18n": "8.0.0-rc.8",
     "@nuxtjs/plausible": "^0.2.3",
     "@types/node": "^20.10.2",
     "@vernaillen/nuxt-base-layer": "^0.2.21",
@@ -61,6 +61,7 @@
   },
   "dependencies": {
     "@twicpics/components": "^0.26.0",
+    "@vercel/speed-insights": "^1.0.0",
     "resend": "^2.0.0",
     "vue-easy-lightbox": "^1.16.0",
     "yup": "^1.3.2"
