--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@nuxtjs/plausible": "^0.2.3",
     "@types/node": "^20.10.2",
     "@vernaillen/nuxt-base-layer": "^0.2.21",
-    "@vitest/coverage-v8": "1.0.2",
+    "@vitest/coverage-v8": "1.0.3",
     "@vueuse/nuxt": "^10.6.1",
     "cssnano": "^6.0.1",
     "cypress": "^13.6.0",
@@ -53,7 +53,7 @@
     "eslint": "^8.55.0",
     "happy-dom": "12.10.3",
     "nuxt": "^3.8.2",
-    "nuxt-og-image": "^2.2.4",
+    "nuxt-og-image": "3.0.0-rc.3",
     "nuxt-time": "^0.1.1",
     "remark-breaks": "^4.0.0",
     "start-server-and-test": "^2.0.3",
