--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     "dayjs": "^1.11.10",
     "eslint": "^8.55.0",
     "happy-dom": "12.10.3",
-    "nuxt": "^3.8.2",
-    "nuxt-og-image": "3.0.0-rc.3",
+    "nuxt": "^3.8.2",    
+    "nuxt-og-image": "^2.2.4",
     "nuxt-time": "^0.1.1",
     "remark-breaks": "^4.0.0",
     "start-server-and-test": "^2.0.3",
