--- a/package.json
+++ b/package.json
@@ -27,26 +27,26 @@
     "fulltest": "rm -rf node_modules && pnpm i && pnpm run lint && pnpm run coverage && pnpm run build"
   },
   "devDependencies": {
-    "@iconify/json": "^2.2.158",
+    "@iconify/json": "^2.2.160",
     "@nuxt/content": "^2.9.0",
     "@nuxt/devtools": "1.0.6",
     "@nuxt/image": "1.1.0",
-    "@nuxt/test-utils": "v3.9.0-alpha.1",
+    "@nuxt/test-utils": "3.9.0",
     "@nuxt/ui": "^2.11.1",
     "@nuxthq/studio": "^1.0.6",
     "@nuxtjs/critters": "^0.5.1",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/i18n": "8.0.0-rc.11",
     "@nuxtjs/plausible": "^0.2.3",
-    "@vernaillen/nuxt-base-layer": "^0.2.21",
-    "@vitest/coverage-v8": "1.0.4",
+    "@vernaillen/nuxt-base-layer": "^0.2.22",
+    "@vitest/coverage-v8": "1.1.0",
     "@vueuse/nuxt": "^10.6.1",
     "cssnano": "^6.0.2",
     "cypress": "^13.6.0",
     "dayjs": "^1.11.10",
-    "eslint": "^8.55.0",
+    "eslint": "^8.56.0",
     "nuxt": "^3.8.2",
-    "nuxt-og-image": "3.0.0-rc.10",
+    "nuxt-og-image": "3.0.0-rc.11",
     "remark-breaks": "^4.0.0",
     "start-server-and-test": "^2.0.3"
   },
