--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "fulltest": "rm -rf node_modules && pnpm i && pnpm run lint && pnpm run coverage && pnpm run build"
   },
   "devDependencies": {
-    "@iconify/json": "^2.2.160",
-    "@nuxt/content": "^2.9.0",
+    "@iconify/json": "^2.2.162",
+    "@nuxt/content": "^2.10.0",
     "@nuxt/devtools": "1.0.6",
     "@nuxt/image": "1.1.0",
     "@nuxt/test-utils": "3.9.0",
@@ -36,25 +36,25 @@
     "@nuxthq/studio": "^1.0.6",
     "@nuxtjs/critters": "^0.5.1",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "@nuxtjs/i18n": "8.0.0-rc.11",
+    "@nuxtjs/i18n": "8.0.0",
     "@nuxtjs/plausible": "^0.2.3",
     "@vernaillen/nuxt-base-layer": "^0.2.22",
     "@vitest/coverage-v8": "1.1.0",
     "@vueuse/nuxt": "^10.6.1",
     "cssnano": "^6.0.2",
-    "cypress": "^13.6.0",
+    "cypress": "^13.6.2",
     "dayjs": "^1.11.10",
     "eslint": "^8.56.0",
-    "nuxt": "^3.8.2",
-    "nuxt-og-image": "3.0.0-rc.11",
+    "nuxt": "^3.9.0",
+    "nuxt-og-image": "3.0.0-rc.12",
     "remark-breaks": "^4.0.0",
     "start-server-and-test": "^2.0.3"
   },
   "dependencies": {
     "@twicpics/components": "^0.26.0",
     "@vercel/speed-insights": "^1.0.2",
-    "resend": "^2.0.0",
-    "vue-easy-lightbox": "^1.16.0",
+    "resend": "^2.1.0",
+    "vue-easy-lightbox": "^1.17.0",
     "yup": "^1.3.3"
   },
   "engines": {
