--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
   },
   "devDependencies": {
     "@iconify/json": "^2.2.170",
-    "@nuxt/content": "2.10.0",
-    "@nuxt/devtools": "1.0.8",
-    "@nuxt/image": "1.1.0",
-    "@nuxt/test-utils": "3.10.0",
+    "@nuxt/content": "^2.10.0",
+    "@nuxt/devtools": "^1.0.8",
+    "@nuxt/image": "^1.3.0",
+    "@nuxt/test-utils": "^3.10.0",
     "@nuxt/ui": "^2.12.3",
     "@nuxthq/studio": "^1.0.8",
     "@nuxtjs/critters": "^0.6.0",
@@ -39,14 +39,14 @@
     "@nuxtjs/i18n": "8.0.0",
     "@nuxtjs/plausible": "^0.2.3",
     "@vernaillen/nuxt-base-layer": "^0.2.22",
-    "@vitest/coverage-v8": "1.2.1",
+    "@vitest/coverage-v8": "^1.2.1",
     "@vueuse/nuxt": "^10.7.2",
     "cssnano": "^6.0.3",
     "cypress": "^13.6.3",
     "dayjs": "^1.11.10",
     "eslint": "^8.56.0",
     "nuxt": "^3.9.3",
-    "nuxt-og-image": "3.0.0-rc.27",
+    "nuxt-og-image": "^3.0.0-rc.27",
     "remark-breaks": "^4.0.0",
     "start-server-and-test": "^2.0.3"
   },
