--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "fulltest": "rm -rf node_modules && pnpm i && pnpm run lint && pnpm run coverage && pnpm run build"
   },
   "devDependencies": {
-    "@iconify/json": "^2.2.170",
+    "@iconify/json": "^2.2.172",
     "@nuxt/content": "2.9.0",
     "@nuxt/devtools": "^1.0.8",
     "@nuxt/image": "^1.3.0",
     "@nuxt/test-utils": "^3.10.0",
     "@nuxt/ui": "^2.12.3",
-    "@nuxthq/studio": "^1.0.8",
+    "@nuxthq/studio": "^1.0.10",
     "@nuxtjs/critters": "^0.6.0",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/i18n": "8.0.0",
@@ -46,14 +46,14 @@
     "dayjs": "^1.11.10",
     "eslint": "^8.56.0",
     "nuxt": "^3.9.3",
-    "nuxt-og-image": "^3.0.0-rc.27",
+    "nuxt-og-image": "3.0.0-rc.29",
     "remark-breaks": "^4.0.0",
     "start-server-and-test": "^2.0.3"
   },
   "dependencies": {
-    "@twicpics/components": "^0.26.0",
-    "@vercel/speed-insights": "^1.0.2",
-    "resend": "^2.1.0",
+    "@twicpics/components": "^0.27.0",
+    "@vercel/speed-insights": "^1.0.7",
+    "resend": "^3.1.0",
     "vue-easy-lightbox": "^1.17.0",
     "yup": "^1.3.3"
   },
