--- a/package.json
+++ b/package.json
@@ -27,26 +27,27 @@
     "fulltest": "rm -rf node_modules && pnpm i && pnpm run lint && pnpm run coverage && pnpm run build"
   },
   "devDependencies": {
-    "@iconify/json": "^2.2.191",
+    "@iconify/json": "^2.2.192",
     "@nuxt/content": "2.12.1",
     "@nuxt/devtools": "^1.0.8",
+    "@nuxt/fonts": "^0.3.0",
     "@nuxt/image": "^1.4.0",
-    "@nuxt/test-utils": "^3.11.0",
+    "@nuxt/test-utils": "^3.12.0",
     "@nuxt/ui": "^2.14.2",
     "@nuxthq/studio": "^1.0.13",
     "@nuxtjs/critters": "^0.6.0",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "@nuxtjs/i18n": "8.1.1",
+    "@nuxtjs/i18n": "8.2.0",
     "@nuxtjs/plausible": "^0.2.3",
-    "@vernaillen/nuxt-base-layer": "^0.2.27",
-    "@vitest/coverage-v8": "^1.3.1",
+    "@vernaillen/nuxt-base-layer": "^0.2.28",
+    "@vitest/coverage-v8": "^1.4.0",
     "@vueuse/nuxt": "^10.9.0",
     "cssnano": "^6.1.0",
-    "cypress": "^13.6.6",
+    "cypress": "^13.7.0",
     "dayjs": "^1.11.10",
     "eslint": "^8.57.0",
     "nuxt": "^3.10.3",
-    "nuxt-og-image": "3.0.0-rc.43",
+    "nuxt-og-image": "3.0.0-rc.47",
     "remark-breaks": "^4.0.0",
     "start-server-and-test": "^2.0.3"
   },
