--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/i18n": "8.3.0",
     "@nuxtjs/plausible": "^1.0.0",
+    "@nuxtjs/sitemap": "^5.1.4",
     "@vernaillen/nuxt-base-layer": "^0.3.4",
     "@vitest/coverage-v8": "^1.5.0",
     "@vueuse/nuxt": "^10.9.0",
@@ -49,7 +50,8 @@
     "nuxt": "^3.11.2",
     "nuxt-og-image": "3.0.0-rc.52",
     "remark-breaks": "^4.0.0",
-    "start-server-and-test": "^2.0.3"
+    "start-server-and-test": "^2.0.3",
+    "vue": "^3.4.23"
   },
   "dependencies": {
     "@twicpics/components": "^0.29.0",
