--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/i18n": "8.3.0",
     "@nuxtjs/plausible": "^1.0.0",
+    "@nuxtjs/seo": "2.0.0-rc.10",
     "@nuxtjs/sitemap": "^5.1.4",
     "@vernaillen/nuxt-base-layer": "^0.3.4",
     "@vitest/coverage-v8": "^1.5.0",
