--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "@nuxtjs/plausible": "^1.0.0",
     "@nuxtjs/seo": "2.0.0-rc.10",
     "@nuxtjs/sitemap": "^5.1.4",
-    "@vernaillen/nuxt-base-layer": "^0.3.4",
     "@vitest/coverage-v8": "^1.5.0",
     "@vueuse/nuxt": "^10.9.0",
     "cssnano": "^6.1.2",
@@ -50,15 +49,18 @@
     "eslint": "^8.57.0",
     "nuxt": "^3.11.2",
     "nuxt-og-image": "3.0.0-rc.52",
+    "nuxt-time": "^0.1.3",
     "remark-breaks": "^4.0.0",
     "start-server-and-test": "^2.0.3",
     "vue": "^3.4.23"
   },
   "dependencies": {
+    "@nuxt/ui-pro": "^1.1.0",
     "@twicpics/components": "^0.29.0",
     "@vercel/speed-insights": "^1.0.10",
     "resend": "^3.2.0",
     "vue-easy-lightbox": "^1.19.0",
+    "vue3-lazyload": "^0.3.8",
     "yup": "^1.4.0"
   },
   "engines": {
