--- a/package.json
+++ b/package.json
@@ -27,32 +27,31 @@
     "fulltest": "rm -rf node_modules && pnpm i && pnpm run lint && pnpm run coverage && pnpm run build"
   },
   "devDependencies": {
-    "@iconify/json": "^2.2.202",
+    "@iconify/json": "^2.2.204",
     "@nuxt/content": "2.12.1",
-    "@nuxt/devtools": "^1.1.5",
+    "@nuxt/devtools": "^1.2.0",
+    "@nuxt/eslint": "^0.3.10",
     "@nuxt/fonts": "^0.6.1",
-    "@nuxt/image": "^1.5.0",
+    "@nuxt/image": "^1.6.0",
     "@nuxt/test-utils": "^3.12.1",
-    "@nuxt/ui": "^2.15.1",
+    "@nuxt/ui": "^2.15.2",
     "@nuxthq/studio": "^1.0.13",
     "@nuxtjs/critters": "^0.7.1",
-    "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "@nuxtjs/i18n": "8.3.0",
+    "@nuxtjs/i18n": "8.3.1",
     "@nuxtjs/plausible": "^1.0.0",
     "@nuxtjs/seo": "2.0.0-rc.10",
     "@nuxtjs/sitemap": "^5.1.4",
-    "@vitest/coverage-v8": "^1.5.0",
+    "@vitest/coverage-v8": "^1.5.2",
     "@vueuse/nuxt": "^10.9.0",
-    "cssnano": "^6.1.2",
-    "cypress": "^13.8.0",
+    "cssnano": "^7.0.0",
+    "cypress": "^13.8.1",
     "dayjs": "^1.11.10",
-    "eslint": "^8.57.0",
     "nuxt": "^3.11.2",
     "nuxt-og-image": "3.0.0-rc.52",
     "nuxt-time": "^0.1.3",
     "remark-breaks": "^4.0.0",
     "start-server-and-test": "^2.0.3",
-    "vue": "^3.4.23"
+    "vite-plugin-eslint2": "^4.4.0"
   },
   "dependencies": {
     "@nuxt/ui-pro": "^1.1.0",
@@ -62,6 +61,11 @@
     "vue-easy-lightbox": "^1.19.0",
     "vue3-lazyload": "^0.3.8",
     "yup": "^1.4.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "@nuxtjs/tailwindcss": "6.11.4"
+    }
   },
   "engines": {
     "node": ">=18",
