--- a/package.json
+++ b/package.json
@@ -27,31 +27,32 @@
     "fulltest": "rm -rf node_modules && pnpm i && pnpm run lint && pnpm run coverage && pnpm run build"
   },
   "devDependencies": {
-    "@iconify/json": "^2.2.222",
-    "@nuxt/content": "2.13.0",
-    "@nuxt/devtools": "^1.3.6",
+    "@iconify/json": "^2.2.226",
+    "@nuxt/content": "2.13.1",
+    "@nuxt/devtools": "^1.3.9",
     "@nuxt/eslint": "^0.3.13",
     "@nuxt/fonts": "^0.7.1",
     "@nuxt/image": "^1.7.0",
     "@nuxt/test-utils": "^3.13.1",
     "@nuxt/ui": "^2.17.0",
-    "@nuxthq/studio": "^2.0.1",
+    "@nuxthq/studio": "^2.0.3",
     "@nuxtjs/critters": "^0.7.1",
     "@nuxtjs/i18n": "8.3.1",
     "@nuxtjs/plausible": "^1.0.0",
     "@nuxtjs/seo": "2.0.0-rc.11",
-    "@nuxtjs/sitemap": "^5.2.1",
-    "@vitest/coverage-v8": "^1.6.0",
+    "@nuxtjs/sitemap": "^5.3.2",
+    "@vitest/coverage-v8": "^2.0.2",
     "@vueuse/nuxt": "^10.11.0",
-    "cssnano": "^7.0.3",
-    "cypress": "^13.12.0",
+    "cssnano": "^7.0.4",
+    "cypress": "^13.13.0",
     "dayjs": "^1.11.11",
-    "nuxt": "^3.12.2",
-    "nuxt-og-image": "3.0.0-rc.54",
+    "nuxt": "^3.12.3",
+    "nuxt-og-image": "3.0.0-rc.56",
     "nuxt-time": "^0.1.3",
     "remark-breaks": "^4.0.0",
     "start-server-and-test": "^2.0.4",
-    "vite-plugin-eslint2": "^4.4.0"
+    "vite-plugin-eslint2": "^4.4.0",
+    "vitest": "^2.0.2"
   },
   "dependencies": {
     "@nuxt/ui-pro": "^1.3.1",
