--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "harmonics.be",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "private": true,
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/vernaillen/harmonics-website.git"
@@ -27,7 +28,7 @@
     "fulltest": "rm -rf node_modules && pnpm i && pnpm run lint && pnpm run coverage && pnpm run build"
   },
   "devDependencies": {
-    "@iconify/json": "^2.2.226",
+    "@iconify/json": "^2.2.229",
     "@nuxt/content": "2.13.1",
     "@nuxt/devtools": "^1.3.9",
     "@nuxt/eslint": "^0.3.13",
@@ -39,24 +40,24 @@
     "@nuxtjs/critters": "^0.7.1",
     "@nuxtjs/i18n": "8.3.1",
     "@nuxtjs/plausible": "^1.0.0",
-    "@nuxtjs/seo": "2.0.0-rc.12",
-    "@nuxtjs/sitemap": "^5.3.2",
-    "@vitest/coverage-v8": "^2.0.2",
+    "@nuxtjs/seo": "2.0.0-rc.15",
+    "@nuxtjs/sitemap": "^5.3.5",
+    "@vitest/coverage-v8": "^2.0.3",
     "@vueuse/nuxt": "^10.11.0",
     "cssnano": "^7.0.4",
-    "cypress": "^13.13.0",
-    "dayjs": "^1.11.11",
-    "nuxt": "^3.12.3",
-    "nuxt-og-image": "3.0.0-rc.59",
+    "cypress": "^13.13.1",
+    "dayjs": "^1.11.12",
+    "nuxt": "^3.12.4",
+    "nuxt-og-image": "3.0.0-rc.64",
     "nuxt-time": "^0.1.3",
     "remark-breaks": "^4.0.0",
     "start-server-and-test": "^2.0.4",
     "vite-plugin-eslint2": "^4.4.0",
-    "vitest": "^2.0.2"
+    "vitest": "^2.0.3"
   },
   "dependencies": {
     "@nuxt/ui-pro": "^1.3.1",
-    "@twicpics/components": "^0.29.2",
+    "@twicpics/components": "^0.29.3",
     "@vercel/speed-insights": "^1.0.12",
     "resend": "^3.4.0",
     "vue-easy-lightbox": "^1.19.0",
@@ -65,7 +66,6 @@
   },
   "engines": {
     "node": ">=18",
-    "pnpm": "9.4.0"
-  },
-  "packageManager": "pnpm@9.4.0"
+    "pnpm": ">=9.3.0"
+  }
 }
