--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ orbs:
 executors:
   pnpm-executor:
     docker:
-      - image: cimg/node:20.15.1-browsers
+      - image: cimg/node:lts-browsers
     working_directory: /tmp/workspace
 
 jobs:
