--- a/package.json
+++ b/package.json
@@ -28,38 +28,38 @@
     "fulltest": "rm -rf node_modules && pnpm i && pnpm run lint && pnpm run coverage && pnpm run build"
   },
   "devDependencies": {
-    "@iconify/json": "^2.2.229",
+    "@iconify/json": "^2.2.233",
     "@nuxt/content": "2.13.2",
     "@nuxt/devtools": "^1.3.9",
-    "@nuxt/eslint": "^0.3.13",
+    "@nuxt/eslint": "^0.4.0",
     "@nuxt/fonts": "^0.7.1",
     "@nuxt/image": "^1.7.0",
-    "@nuxt/test-utils": "^3.13.1",
-    "@nuxt/ui": "^2.17.0",
+    "@nuxt/test-utils": "^3.14.0",
+    "@nuxt/ui": "^2.18.3",
     "@nuxthq/studio": "^2.0.3",
     "@nuxtjs/critters": "^0.7.1",
-    "@nuxtjs/i18n": "8.3.1",
-    "@nuxtjs/plausible": "^1.0.0",
+    "@nuxtjs/i18n": "8.3.3",
+    "@nuxtjs/plausible": "^1.0.1",
     "@nuxtjs/seo": "2.0.0-rc.16",
-    "@nuxtjs/sitemap": "^5.3.5",
-    "@vitest/coverage-v8": "^2.0.3",
+    "@nuxtjs/sitemap": "6.0.0-beta.1",
+    "@vitest/coverage-v8": "^2.0.5",
     "@vueuse/nuxt": "^10.11.0",
     "cssnano": "^7.0.4",
-    "cypress": "^13.13.1",
+    "cypress": "^13.13.2",
     "dayjs": "^1.11.12",
     "nuxt": "^3.12.4",
     "nuxt-og-image": "3.0.0-rc.64",
     "nuxt-time": "^0.1.3",
     "remark-breaks": "^4.0.0",
-    "start-server-and-test": "^2.0.4",
+    "start-server-and-test": "^2.0.5",
     "vite-plugin-eslint2": "^4.4.0",
-    "vitest": "^2.0.3"
+    "vitest": "^2.0.5"
   },
   "dependencies": {
-    "@nuxt/ui-pro": "^1.3.1",
-    "@twicpics/components": "^0.29.3",
+    "@nuxt/ui-pro": "^1.4.0",
+    "@twicpics/components": "^0.30.0",
     "@vercel/speed-insights": "^1.0.12",
-    "resend": "^3.4.0",
+    "resend": "^3.5.0",
     "vue-easy-lightbox": "^1.19.0",
     "vue3-lazyload": "^0.3.8",
     "yup": "^1.4.0"
