--- a/package.json
+++ b/package.json
@@ -28,32 +28,32 @@
     "fulltest": "rm -rf node_modules && pnpm i && pnpm run lint && pnpm run coverage && pnpm run build"
   },
   "devDependencies": {
-    "@iconify-json/circle-flags": "^1.1.48",
-    "@iconify-json/logos": "^1.1.43",
-    "@iconify-json/mdi": "^1.1.67",
-    "@iconify-json/noto": "^1.1.19",
-    "@iconify-json/ph": "^1.1.13",
-    "@iconify-json/simple-icons": "^1.1.111",
+    "@iconify-json/circle-flags": "^1.2.0",
+    "@iconify-json/logos": "^1.2.0",
+    "@iconify-json/mdi": "^1.2.0",
+    "@iconify-json/noto": "^1.2.0",
+    "@iconify-json/ph": "^1.2.0",
+    "@iconify-json/simple-icons": "^1.2.1",
     "@nuxt/content": "2.13.2",
-    "@nuxt/devtools": "^1.3.9",
-    "@nuxt/eslint": "^0.4.0",
-    "@nuxt/fonts": "^0.7.1",
-    "@nuxt/image": "^1.7.0",
-    "@nuxt/test-utils": "^3.14.0",
-    "@nuxt/ui": "^2.18.3",
+    "@nuxt/devtools": "^1.4.1",
+    "@nuxt/eslint": "^0.5.5",
+    "@nuxt/fonts": "^0.7.2",
+    "@nuxt/image": "^1.8.0",
+    "@nuxt/test-utils": "^3.14.1",
+    "@nuxt/ui": "^2.18.4",
     "@nuxthq/studio": "^2.0.3",
-    "@nuxtjs/critters": "^0.7.1",
-    "@nuxtjs/i18n": "8.3.3",
-    "@nuxtjs/plausible": "^1.0.1",
-    "@nuxtjs/seo": "2.0.0-rc.16",
-    "@nuxtjs/sitemap": "6.0.0-beta.1",
+    "@nuxtjs/critters": "^0.7.2",
+    "@nuxtjs/i18n": "8.5.2",
+    "@nuxtjs/plausible": "^1.0.2",
+    "@nuxtjs/seo": "2.0.0-rc.21",
+    "@nuxtjs/sitemap": "6.0.1",
     "@vitest/coverage-v8": "^2.0.5",
-    "@vueuse/nuxt": "^10.11.0",
-    "cssnano": "^7.0.4",
-    "cypress": "^13.13.2",
-    "dayjs": "^1.11.12",
-    "nuxt": "^3.12.4",
-    "nuxt-og-image": "3.0.0-rc.64",
+    "@vueuse/nuxt": "^11.0.3",
+    "cssnano": "^7.0.6",
+    "cypress": "^13.14.2",
+    "dayjs": "^1.11.13",
+    "nuxt": "^3.13.1",
+    "nuxt-og-image": "3.0.0-rc.66",
     "nuxt-time": "^0.1.3",
     "remark-breaks": "^4.0.0",
     "start-server-and-test": "^2.0.5",
@@ -61,10 +61,10 @@
     "vitest": "^2.0.5"
   },
   "dependencies": {
-    "@nuxt/ui-pro": "^1.4.0",
+    "@nuxt/ui-pro": "^1.4.1",
     "@twicpics/components": "^0.30.0",
     "@vercel/speed-insights": "^1.0.12",
-    "resend": "^3.5.0",
+    "resend": "^4.0.0",
     "vue-easy-lightbox": "^1.19.0",
     "vue3-lazyload": "^0.3.8",
     "yup": "^1.4.0"
