--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "harmonics.be",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "private": true,
   "type": "module",
   "repository": {
@@ -28,46 +28,51 @@
     "fulltest": "rm -rf node_modules && pnpm i && pnpm run lint && pnpm run coverage && pnpm run build"
   },
   "devDependencies": {
-    "@iconify-json/circle-flags": "^1.2.0",
-    "@iconify-json/logos": "^1.2.0",
-    "@iconify-json/mdi": "^1.2.0",
-    "@iconify-json/noto": "^1.2.0",
-    "@iconify-json/ph": "^1.2.0",
-    "@iconify-json/simple-icons": "^1.2.1",
-    "@nuxt/content": "2.13.2",
-    "@nuxt/devtools": "^1.4.1",
-    "@nuxt/eslint": "^0.5.5",
-    "@nuxt/fonts": "^0.7.2",
-    "@nuxt/image": "^1.8.0",
-    "@nuxt/test-utils": "^3.14.1",
-    "@nuxt/ui": "^2.18.4",
-    "@nuxthq/studio": "^2.0.3",
-    "@nuxtjs/critters": "^0.7.2",
-    "@nuxtjs/i18n": "8.5.2",
-    "@nuxtjs/plausible": "^1.0.2",
-    "@nuxtjs/seo": "2.0.0-rc.21",
-    "@nuxtjs/sitemap": "6.0.1",
-    "@vitest/coverage-v8": "^2.0.5",
-    "@vueuse/nuxt": "^11.0.3",
+    "@iconify-json/circle-flags": "^1.2.3",
+    "@iconify-json/logos": "^1.2.4",
+    "@iconify-json/mdi": "^1.2.2",
+    "@iconify-json/noto": "^1.2.2",
+    "@iconify-json/ph": "^1.2.2",
+    "@iconify-json/simple-icons": "^1.2.17",
+    "@nuxt/content": "2.13.4",
+    "@nuxt/devtools": "^1.7.0",
+    "@nuxt/eslint": "^0.7.4",
+    "@nuxt/fonts": "^0.10.3",
+    "@nuxt/image": "^1.8.1",
+    "@nuxt/test-utils": "^3.15.1",
+    "@nuxt/ui": "^2.20.0",
+    "@nuxthq/studio": "^2.2.1",
+    "@nuxtjs/critters": "^0.8.0",
+    "@nuxtjs/i18n": "9.1.1",
+    "@nuxtjs/plausible": "^1.2.0",
+    "@nuxtjs/seo": "2.0.2",
+    "@nuxtjs/sitemap": "7.0.1",
+    "@vitest/coverage-v8": "^2.1.8",
+    "@vueuse/nuxt": "^12.2.0",
     "cssnano": "^7.0.6",
-    "cypress": "^13.14.2",
+    "cypress": "^13.17.0",
     "dayjs": "^1.11.13",
-    "nuxt": "^3.13.1",
-    "nuxt-og-image": "3.0.0-rc.66",
-    "nuxt-time": "^0.1.3",
+    "nuxt": "^3.15.0",
+    "nuxt-og-image": "4.0.2",
+    "nuxt-time": "^1.0.3",
     "remark-breaks": "^4.0.0",
-    "start-server-and-test": "^2.0.5",
-    "vite-plugin-eslint2": "^4.4.0",
-    "vitest": "^2.0.5"
+    "start-server-and-test": "^2.0.9",
+    "vite-plugin-eslint2": "^5.0.3",
+    "vitest": "^2.1.8"
   },
   "dependencies": {
-    "@nuxt/ui-pro": "^1.4.1",
-    "@twicpics/components": "^0.30.0",
-    "@vercel/speed-insights": "^1.0.12",
-    "resend": "^4.0.0",
+    "@nuxt/ui-pro": "^1.6.0",
+    "@twicpics/components": "^0.31.1",
+    "@vercel/speed-insights": "^1.1.0",
+    "resend": "^4.0.1",
     "vue-easy-lightbox": "^1.19.0",
     "vue3-lazyload": "^0.3.8",
-    "yup": "^1.4.0"
+    "yup": "^1.6.1"
+  },
+  "pnpm": {
+    "overrides": {
+      "vite": "5.4.11"
+    }
   },
   "engines": {
     "pnpm": ">=9.3.0"
