--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,9 +35,9 @@ jobs:
         run: pnpm install
 
       - name: Build
-        env:
-          NODE_OPTIONS: "--max_old_space_size=4096"
-        run: pnpm run build
+        run: |
+          export NODE_OPTIONS=--max_old_space_size=4096
+          pnpm run build
 
       - name: Lint
         run: pnpm run lint
