--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
     "fulltest": "rm -rf node_modules && pnpm i && pnpm run lint && pnpm run coverage && pnpm run build"
   },
   "devDependencies": {
-    "@iconify-json/circle-flags": "^1.2.3",
+    "@iconify-json/circle-flags": "^1.2.5",
     "@iconify-json/logos": "^1.2.4",
-    "@iconify-json/mdi": "^1.2.2",
+    "@iconify-json/mdi": "^1.2.3",
     "@iconify-json/noto": "^1.2.2",
     "@iconify-json/ph": "^1.2.2",
-    "@iconify-json/simple-icons": "^1.2.20",
+    "@iconify-json/simple-icons": "^1.2.21",
     "@nuxt/content": "2.13.4",
-    "@nuxt/devtools": "^1.7.0",
+    "@nuxt/devtools": "2.0.0-beta.3",
     "@nuxt/eslint": "^0.7.5",
     "@nuxt/fonts": "^0.10.3",
     "@nuxt/image": "^1.9.0",
@@ -47,22 +47,22 @@
     "@nuxtjs/plausible": "^1.2.0",
     "@nuxtjs/seo": "2.0.3",
     "@nuxtjs/sitemap": "7.0.2",
-    "@vitest/coverage-v8": "^2.1.8",
+    "@vitest/coverage-v8": "^3.0.2",
     "@vueuse/nuxt": "^12.4.0",
     "cssnano": "^7.0.6",
-    "cypress": "^13.17.0",
+    "cypress": "^14.0.0",
     "dayjs": "^1.11.13",
-    "nuxt": "^3.15.1",
+    "nuxt": "^3.15.2",
     "nuxt-og-image": "4.0.3",
     "nuxt-time": "^1.0.3",
     "remark-breaks": "^4.0.0",
     "start-server-and-test": "^2.0.10",
     "vite-plugin-eslint2": "^5.0.3",
-    "vitest": "^2.1.8"
+    "vitest": "^3.0.2"
   },
   "dependencies": {
     "@nuxt/ui-pro": "^1.7.0",
-    "@twicpics/components": "^0.31.1",
+    "@twicpics/components": "^0.31.2",
     "@vercel/speed-insights": "^1.1.0",
     "resend": "^4.1.1",
     "vue-easy-lightbox": "^1.19.0",
