--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@iconify-json/noto": "^1.2.2",
     "@iconify-json/ph": "^1.2.2",
     "@iconify-json/simple-icons": "^1.2.21",
-    "@nuxt/content": "2.13.4",
+    "@nuxt/content": "https://pkg.pr.new/@nuxt/content@b4e7dec",
     "@nuxt/devtools": "2.0.0-beta.3",
     "@nuxt/eslint": "^0.7.5",
     "@nuxt/fonts": "^0.10.3",
