--- a/package.json
+++ b/package.json
@@ -36,13 +36,13 @@
     "@iconify-json/simple-icons": "^1.2.22",
     "@nuxt/content": "https://pkg.pr.new/@nuxt/content@b4e7dec",
     "@nuxt/devtools": "2.0.0-beta.3",
-    "@nuxt/eslint": "^0.7.5",
+    "@nuxt/eslint": "1.0.0-rc.1",
     "@nuxt/fonts": "^0.10.3",
     "@nuxt/image": "^1.9.0",
     "@nuxt/test-utils": "^3.15.4",
     "@nuxt/ui": "^2.21.0",
     "@nuxtjs/critters": "^0.8.0",
-    "@nuxtjs/i18n": "9.1.3",
+    "@nuxtjs/i18n": "9.1.4",
     "@nuxtjs/plausible": "^1.2.0",
     "@nuxtjs/seo": "2.1.1",
     "@nuxtjs/sitemap": "7.2.4",
@@ -51,7 +51,7 @@
     "cssnano": "^7.0.6",
     "cypress": "^14.0.1",
     "dayjs": "^1.11.13",
-    "nuxt": "^3.15.3",
+    "nuxt": "^3.15.4",
     "nuxt-og-image": "4.1.2",
     "nuxt-time": "^1.0.3",
     "remark-breaks": "^4.0.0",
