--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "@iconify-json/mdi": "^1.2.3",
     "@iconify-json/noto": "^1.2.2",
     "@iconify-json/ph": "^1.2.2",
-    "@iconify-json/simple-icons": "^1.2.22",
+    "@iconify-json/simple-icons": "^1.2.23",
     "@nuxt/content": "https://pkg.pr.new/@nuxt/content@b4e7dec",
-    "@nuxt/devtools": "2.0.0-beta.3",
-    "@nuxt/eslint": "1.0.0-rc.1",
+    "@nuxt/devtools": "2.0.0-beta.4",
+    "@nuxt/eslint": "1.0.0",
     "@nuxt/fonts": "^0.10.3",
     "@nuxt/image": "^1.9.0",
     "@nuxt/test-utils": "^3.15.4",
